05Aug00=======================================================================
1. Fixed hax character problem put in somewhen in the C Client
02Aug00=======================================================================
1. put back hex check exception for PC29
01Aug00=======================================================================
1. made the export and import ascii system work finally. The user_asc file
generated (automatically and 0000Z Sunday morning) is autoloading. Just 
execute it and it will automatically reload your user database.
2. remove import_users.pl no longer necessary
31Jul00=======================================================================
1. try to fix paging problem.
2. added help for spoof and set/forward
3. fixed bogus callsign check for field 2 of a PC12
4. Add DB_File to DXCommandmode to make it available for commands
30Jul00=======================================================================
1. Added talk mode so that I don't have to keep typing T <call> all the time.
2. fiddled around with storing of Debug messages a bit more.
3. bomb proofed the type command.
4. started the objectifying for talk, dx and announcements.
5. fix talkmode so that it only does 'via' PC10s when it really needs to.
6. SEND now displays a message if you try to do it in not prompt mode.
7. stopped a few more things being done by rcmd (eg send, talk, ann, dx)
8. tidied up the talking a bit more.
9. Increase default hop counts all round.
10. Adjust hex encoding so that 8 bit characters should now go thru
11. check more of the essential protocol fields for 8 bit characters.
29Jul00=======================================================================
1. added forward/latlong which will forward ALL the users that have a latitude
and longitude set on them to one or more locally connected nodes - with a hop
count of 1.
2. speeded up the show/node command by using the DB_File interface and 